syntax = "proto3";

option java_multiple_files = true;
option java_package = "examples.stock";
option java_outer_classname = "StockProto";

package stock;

//message types
message StockRequest {
	string symbol = 1;
}

message StockReply {
	int32 price = 1;
}


//server interface
service StockService {
	rpc GetLastStockPrice(StockRequest) returns (StockReply);
}

